<resources>
    <string name="app_name"> AKECY </string>
    <string name="forgot_password"> Esqueceu a senha? </string>
    <string name="enter"> Entrar </string>
    <string name="back"> Voltar </string>
    <string name="advance"> Avançar </string>
    <string name="login"> Login </string>
    <string name="register"> Cadastrar-se </string>
    <string name="name">  Nome Completo </string>
    <string name="email"> E-mail </string>
    <string name="password"> Senha </string>
    <string name="confirm_password"> Confirme a senha </string>
    <string name="new_password"> Nova senha </string>
    <string name="cpf"> CPF </string>
    <string name="number"> Telefone </string>
    <string name="date_of_birth"> Data de Nascimento </string>
    <string name="code"> Código </string>
    <string name="proceed"> Continuar </string>
    <string name="esque_text"> Passo 1 de 3 </string>
    <string name="esque_text2"> Vamos recuperar o seu acesso </string>
    <string name="esque2_text"> Passo 2 de 3 </string>
    <string name="esque2_text2"> Digite o código de 6 dígitos </string>
    <string name="esque2_text3"> Enviamos um código de 6 dígitos para o seu endereço de e-mail. Lembre-se de verificar a pasta de spam! </string>
    <string name="esque3_text"> Passo 3 de 3 </string>
    <string name="esque3_text2"> Redefina sua senha </string>
    <string name="save_new_password"> Salvar nova senha </string>
    <string name="check_min_length"> No mínimo 7 caracteres </string>
    <string name="check_uppercase"> Pelo menos 1 letra maiúscula </string>
    <string name="check_symbol"> Pelo menos 1 símbolo </string>
    <string name="check_number"> Pelo menos 1 número </string>
    <string name="recents"> Novos </string>
    <string name="coupons"> Cupons </string>
    <string name="search"> Pesquisar </string>
    <string name="favorites"> Favoritos </string>
    <string name="account"> Conta </string>
    <string name="sex"> Sexo </string>
    <string name="edit_data"> Editar dados </string>
    <string name="change_password"> Alterar senha </string>
    <string name="log_out"> Sair da conta </string>
    <string name="recent"> Mais recentes </string>
    <string name="cashback"> Com cashback </string>
    <string name="discounts"> Maiores descontos </string>
    <string name="filter_coupon"> Filtrar por </string>
    <string name="placeholder"> Placeholder </string>
    <string name="place_holder"> Place holder </string>
    <string name="sizes"> Tamanhos Dísponiveis </string>
    <string name="no_favorite"> Nenhum produto favoritado </string>
    <string name="actual_password"> Senha atual </string>
    <string name="confirm_new_password"> Confirme a nova senha </string>
    <string name="insert_name"> Insira seu Nome Completo </string>
    <string name="insert_email"> Insira seu Email </string>
    <string name="insert_cpf"> Insira seu CPF </string>
    <string name="insert_date_of_birth"> Insira sua Data de Nascimento </string>
    <string name="insert_number"> Insira seu Telefone </string>
    <string name="passwords_do_not_match"> As senhas não coincidem </string>
    <string name="search_products"> Pesquisar produtos </string>
    <string name="masculine"> Masculino </string>
    <string name="feminine"> Feminino </string>
    <string name="children"> Infantil </string>
    <string name="accessories"> Acessórios </string>
    <string name="equipment"> Equipamentos </string>
    <string name="balls"> Bolas </string>
    <string name="categories"> Categorias </string>
    <string name="erase"> Limpar Categoria </string>
    <string name="save_data"> Salvar dados </string>
    <string name="not_inform"> Prefiro não informar </string>
</resources>