<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    android:visibility="visible"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/esque2_codigo"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:background="@drawable/config_edittext_arredondado"
        android:backgroundTint="#FFFFFF"
        android:drawableStart="@drawable/ic_code"
        android:drawablePadding="15dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/code"
        android:inputType=""
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/esque2_texto3" />

    <Button
        android:id="@+id/esque2_btnContinuar"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="168dp"
        android:backgroundTint="#FFA600"
        android:text="@string/proceed"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#FFA600"
        app:strokeWidth="2dp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/esque2_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/esque2_text"
        android:textColor="#DADADA"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/esque2_voltar" />

    <TextView
        android:id="@+id/esque2_texto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/esque2_text2"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/esque2_texto" />

    <TextView
        android:id="@+id/esque2_texto3"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/esque2_text3"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/esque2_texto2"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/esque2_voltar"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/back"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

</androidx.constraintlayout.widget.ConstraintLayout>