<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background">

    <Button
        android:id="@+id/salvar_ed"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="95dp"
        android:backgroundTint="#FFA600"
        android:text="@string/save_data"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#FFA600"
        app:strokeWidth="2dp"
        tools:ignore="TextContrastCheck,TextSizeCheck" />

    <EditText
        android:id="@+id/telefone_ed"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="password"
        android:background="@drawable/config_rounded_border"
        android:backgroundTint="#FFFFFF"
        android:drawableStart="@drawable/ic_number"
        android:drawablePadding="15dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/insert_number"
        android:inputType=""
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataDeNascimento_ed" />

    <RadioGroup
        android:id="@+id/sexo_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/telefone_ed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/masculino_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/masculine" />

        <RadioButton
            android:id="@+id/feminino_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/feminine" />

        <RadioButton
            android:id="@+id/prefiro_nao_informar_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/not_inform" />

    </RadioGroup>

    <EditText
        android:id="@+id/dataDeNascimento_ed"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="name"
        android:background="@drawable/config_rounded_border"
        android:backgroundTint="#FFFFFF"
        android:drawableStart="@drawable/ic_calendar"
        android:drawablePadding="15dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/insert_date_of_birth"
        android:inputType="date"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpf_ed" />

    <EditText
        android:id="@+id/cpf_ed"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:background="@drawable/config_rounded_border"
        android:backgroundTint="#FFFFFF"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="15dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/insert_cpf"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_ed" />

    <EditText
        android:id="@+id/email_ed"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/config_rounded_border"
        android:backgroundTint="#FFFFFF"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="15dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/insert_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_completo_ed" />

    <EditText
        android:id="@+id/nome_completo_ed"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:autofillHints="name"
        android:background="@drawable/config_rounded_border"
        android:backgroundTint="#FFFFFF"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="15dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/insert_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voltar_ed" />

    <ImageButton
        android:id="@+id/voltar_ed"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/back"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

</androidx.constraintlayout.widget.ConstraintLayout>