<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#000000"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/ic_novos"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/recents"
                android:src="@drawable/ic_novos" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recents"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/ic_cupons"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/coupons"
                android:src="@drawable/ic_cupons2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coupons"
                android:textColor="#FFA600"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/ic_pesquisar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/search"
                android:src="@drawable/ic_pesquisar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/ic_favoritos"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/favorites"
                android:src="@drawable/ic_favoritos" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favorites"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/ic_conta"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/account"
                android:src="@drawable/ic_person" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="218dp"
        android:layout_height="42dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_logo" />

    <TextView
        android:id="@+id/cupons_cashback_filtrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:text="@string/filter_coupon"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cupons_cashback_recentes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="14dp"
        android:text="@string/recent"
        android:textColor="#cdcdcd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cupons_cashback_filtrar" />

    <TextView
        android:id="@+id/cupons_cashback_descontos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="20dp"
        android:text="@string/discounts"
        android:textColor="#cdcdcd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cupons_cashback_filtrar" />

    <TextView
        android:id="@+id/cupons_cashback_cashback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/cashback"
        android:textColor="#FFA600"
        app:layout_constraintEnd_toStartOf="@+id/cupons_cashback_descontos"
        app:layout_constraintStart_toEndOf="@+id/cupons_cashback_recentes"
        app:layout_constraintTop_toBottomOf="@+id/cupons_cashback_filtrar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintTop_toBottomOf="@+id/cupons_cashback_cashback">

        <LinearLayout
            android:id="@+id/container_cupons_cashback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>